--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "audio-sink",
   "version": "1.0.1",
-  "description": "Sink or tap pcm data",
+  "description": "Sink or tap audio stream data",
   "main": "index.js",
   "dependencies": {
     "inherits": "^2.0.1",
