--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/audio-lab/sink"
+    "url": "https://github.com/audiojs/audio-sink"
   },
   "keywords": [
     "sink",
@@ -33,7 +33,7 @@
   "author": "Deema Yvanow <dfcreative@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/audio-lab/sink/issues"
+    "url": "https://github.com/audiojs/audio-sink/issues"
   },
-  "homepage": "https://github.com/audio-lab/sink"
+  "homepage": "https://github.com/audiojs/audio-sink"
 }
