--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "audio-sink",
   "version": "1.1.3",
   "description": "Sink or tap audio stream data",
-  "main": "index.js",
+  "main": "./stream.js",
   "dependencies": {
     "inherits": "^2.0.1",
     "xtend": "^4.0.1"
   },
-  "files": [
-    "index.js"
-  ],
   "devDependencies": {
-    "audio-generator": "^2.0.5"
+    "audio-generator": "^2.0.5",
+    "eslint": "^3.4.0"
   },
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "lint": "eslint *.js --ignore-pattern test*"
   },
   "repository": {
     "type": "git",
