--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "test": "node test.js",
+    "preversion": "npm run lint && npm run test",
     "lint": "eslint *.js --ignore-pattern test*"
   },
   "repository": {
