--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "devDependencies": {
     "audio-generator": "^2.0.5",
-    "eslint": "^3.4.0"
+    "eslint": "^3.4.0",
+    "pull-stream": "^3.4.5",
+    "tst": "^1.3.1"
   },
   "scripts": {
     "test": "node test.js",
+    "test:browser": "budo test.js",
     "preversion": "npm run lint && npm run test",
     "lint": "eslint *.js --ignore-pattern test*"
   },
